1.0.9
  13-02-21
  Feature
  * #45712: Handle PDF > 1.3
            Pages with shaded fills should rendered as bitmap
            Effected files:
            * lib/typoscript/class.tx_flipit_typoscript.php
            * static
              * constants.txt
              * setup.txt

1.0.8
  13-02-13
  Feature
  * #45471: Property: Rendering a PDF as a bitmap
            Effected files:
            * ext_emconf.php
            * ext_tables.php
            * ext_tables.sql
            * locallang_db.xml
            * lib/typoscript/class.tx_flipit_typoscript.php
            * static
              * constants.txt
              * setup.txt

1.0.7
  13-02-13
  Bugfix
  * #45470: SWF files had wrong order in case of a Windows server
            Effected files:
            * lib/typoscript/class.tx_flipit_typoscript.php

1.0.6
  13-02-07
  Bugfix
  * #i0009: TYPO3 < 4.7
            Effected files:
            * ext_tables.php
            * static/4.6/setup.txt

1.0.5
  13-02-06
  Feature
  * #i0008: Wrap cObjData fields
            Effected files:
            * lib/typoscript/class.tx_flipit_typoscript.php
  Bugfix
  * #i0007: Don't take field labels from Constant Editot in case of tt_content
            Effected files:
            * lib/typoscript/class.tx_flipit_typoscript.php

1.0.4
  13-02-05
  Features
  * #45174: Debugtrail for the DRS
  * #45170: Autodetection of the size of the biggest SWF file
  * #i0006: Manual is updated

1.0.3
  13-02-04
  Manual
  * #i0006: Initial release of the manual
  Feature
  * #45120: TypoScript for TYPO3 4.7
            Effected files:
            * static
              * 4.6
                * constants.txt     (new)
                * setup.txt         (new)
              * setup.txt
            * ext_tables.php

  Improvement
  * #45114: t3jquery.txt

1.0.2
  13-02-02
  Feature
  * #i0002: Include static template for "without fancybox"
            Effected files:
            * static/woFancybox
              * constants.txt