@@ -11,6 +11,7 @@ CREATE TABLE tt_content (
   tx_flipit_evaluate tinytext,
   tx_flipit_fancybox tinytext,
   tx_flipit_layout tinytext,
+  tx_flipit_pagelist tinytext,
   tx_flipit_quality tinytext,
   tx_flipit_swf_files text,
   tx_flipit_updateswfxml tinytext,
