@@ -8,7 +8,7 @@
     <languageKey index="default" type="array">
       <label index="palette_tx_flipit_fancybox">Lightbox</label>
       <label index="palette_tx_flipit_files">Files</label>
-      <label index="palette_tx_flipit_properties">Main properties</label>
+      <label index="palette_tx_flipit_quality">Quality and bitmap pages</label>
       <label index="phrase_remove">Please remove</label>
       <label index="sheetFlipit_evaluate_drs_disabled">The <![CDATA[<a href="/typo3/mod.php?M=tools_em" title="Link to the TYPO3 extension manager" target="_blank">extension manager</a>]]> checks requirements and you can enable the DRS - the Development Reporting System. The DRS reports the work flow.</label>
       <label index="sheetFlipit_evaluate_drs_enabled">Warning: The DRS - Development Reporting System - is enabled. This costs performance and is a security risk for any operative sytem. You can disable the DRS in the <![CDATA[<a href="/typo3/mod.php?M=tools_em" title="Link to the TYPO3 extension manager" target="_blank">extension manager</a>]]>. Status: %status%.</label>
@@ -38,6 +38,7 @@
       <label index="tcaLabel_tx_flipit_layout_item_02">2: Flip it! and tt_content default but download link</label>
       <label index="tcaLabel_tx_flipit_layout_item_03">3: Flip it! and tt_content default</label>
       <label index="tcaLabel_tx_flipit_layout_item_ts">Value from the Constant Editor (recommended)</label>
+      <label index="tcaLabel_tx_flipit_pagelist">Comma seperated list of pages, which should rendered as bitmap</label>
       <label index="tcaLabel_tx_flipit_quality">Quality</label>
       <label index="tcaLabel_tx_flipit_quality_item_high">High: vector file (best quality)</label>
       <label index="tcaLabel_tx_flipit_quality_item_low">Low: bitmap file (best performance)</label>
@@ -52,7 +53,7 @@
     <languageKey index="de" type="array">
       <label index="palette_tx_flipit_fancybox">Lightbox</label>
       <label index="palette_tx_flipit_files">Dateien</label>
-      <label index="palette_tx_flipit_properties">Einstellungen</label>
+      <label index="palette_tx_flipit_quality">Qualit<![CDATA[&auml;]]>t und Bitmap-Seiten</label>
       <label index="phrase_remove">Bitte entferne</label>
       <label index="sheetFlipit_evaluate_drs_disabled">Im <![CDATA[<a href="/typo3/mod.php?M=tools_em" title="Link zum TYPO3 Extension-Manager" target="_blank">Extension Manager</a>]]> kannst Du weitere Einstellungen pr<![CDATA[&uuml;]]>fen und das DRS - das Development Reporting System - aktivieren. Das DRS zeigt Dir den gesamten Arbeitsprozess an.</label>
       <label index="sheetFlipit_evaluate_drs_enabled">Warnung: Das DRS - Development Reporting System - ist aktiviert. Das kostet Performance und ist ein Sicherheitsrisiko f<![CDATA[&uuml;]]>r jedes operative System. Du kannst das DRS im <![CDATA[<a href="/typo3/mod.php?M=tools_em" title="Link zum TYPO3 Extension-Manager" target="_blank">Extension Manager</a>]]> deaktivieren. Status: %status%.</label>
@@ -83,6 +84,7 @@
       <label index="tcaLabel_tx_flipit_layout_item_02">2: Flip it! und tt_content-Standard ohne Download-Link</label>
       <label index="tcaLabel_tx_flipit_layout_item_03">3: Flip it! und tt_content-Standard</label>
       <label index="tcaLabel_tx_flipit_layout_item_ts">Wert vom Konstanten-Editor (empfohlen)</label>
+      <label index="tcaLabel_tx_flipit_pagelist">Komma getrennte Liste von Seiten, die als Bitmap verarbeitet werden sollen</label>
       <label index="tcaLabel_tx_flipit_quality">Qualit<![CDATA[&auml;]]>t</label>
       <label index="tcaLabel_tx_flipit_quality_item_high">Hoch: Vektor-Datei (beste Qualit<![CDATA[&auml;]]>t)</label>
       <label index="tcaLabel_tx_flipit_quality_item_low">Niedrig: Bitmap-Datei (beste Performance)</label>
